--- a/Journalism 320/index.html
+++ b/Journalism 320/index.html
@@ -3,38 +3,38 @@
 <html>
 
 <head>
-<title>About John Doe</title>
-<style> .additionalinfo{background-color: DodgerBlue; color: white; border: 2px solid black} </style>
-<style> #Section {background-color: lightblue; color: black; padding: 20px; text-align: center} </style>
+<title>Lauren Capucci's Portfolio
+</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 <h1>About me</h1>
-<img alt="man in his early 20's smiling" src="man.jpg" width=304px height=201px/>
-<h2 id="Section">Introducing Me</h2>
-<p> My name is John Doe, and I am an accountant. I am originally from New Jersey, but moved to Chicago a few years ago. I graduated from the University of Chicago in 2019 as an economics major and decided to stay in the city for work afterwards. I live with 3 friends that I met all college. Our apartment is located in the Loop, which makes it really easy for me to go to work and come back, since it is a walking distance.</p>
+<img alt="Lauren with her graduation cap smiling" src="me.jpg" width=304px height=201px/>
 
-<h2 id="Section">Hobbies</h2>
+<div class="headers"><h2 id="Section">Introducing Me</h2></div>
+<p> My name is Lauren Capucci, and I am a senior at Northwestern University studying journalism and biology. I am originally from Porto Alegre, Brazil, but moved to Evanston a few years ago for school. I am currently on the pre-med track and hope to apply to medical schools soon.</p>
+
+<div class="headers"><h2 id="Section">Hobbies</h2></div>
 <p>On the weekends, I like to do a few things for fun in order to relax after a long week at work. Some of my hobbies are: </p>
-<ul> <li> Running; </li> <li> Reading; </li> <li> Cooking. </li> </ul>
+<ul> <li> Running; </li> <li> Reading; </li> <li> Baking. </li> </ul>
 
-<h2 id="Section">Additional Information</h2>
+<div class="headers"><h2> Additional Information </h2> </div>
 
 <div class="additionalinfo">
-<h2>Contact Information</h2>
-<p>If you have any questions, please email me. My email address is <span style="border: 1px solid black">johndoe@gmail.com.</span> My phone number is <span style="border: 1px solid black">999-999-9999.</span></p>
+<h5>Contact Information</h5>
+<p style="color: white">If you have any questions, please email me. My email address is <span style="border: 1px solid">laurencapucci@gmail.com.</span> My phone number is <span style="border: 1px solid black">224-300-8421.</span></p>
 </div>
 
 <div class="additionalinfo">
-<h2>FAQS</h2>
-<h4>Are you working on any personal projects right now?</h3>
-<p>I am currently working on how to use LLMs to help accountants, such as myself, with everyday tasks so as to speed-up specific processes at work.</p>
-<h4>Are you thinking of furthering your education soon?</h3>
-<p>I am currently looking at applying to AI Masters Programs, specifically in The Netherlands.</p>
+<h5>FAQS</h5>
+<h4>Are you working on any personal projects right now?</h4>
+<p style="color: white">I am currently focusing on learning how to code. I am trying to learn CSS, HTML and python.</p>
+<h4>What are your post-grad plans?</h3>
+<p style="color: white">I am currently looking at applying to a few pre-health Masters Programs, specifically in the Chicago area.</p>
 </div>
-
-
 
 </body>
 </html>
+
 
