--- a/scratch.html
+++ b/scratch.html
@@ -1,3 +1,4 @@
+<!--
 <head>
     <title>Scratch Document
     </title>
@@ -20,8 +21,20 @@
 <p style="color: white">If you have any questions, please email me. My email address is <span style="border: 1px solid">laurencapucci@gmail.com.</span> My phone number is <span style="border: 1px solid black">224-300-8421.</span></p>
 </div>
 
-body {background-image: url(northwestern.png.jpeg);
-    background-repeat: no-repeat; background-position: top; margin: 20px; background-attachment: scroll}
+<div class="headers"><h2> Additional Information </h2> </div>
 
+<div class="additionalinfo">
+<h5>Contact Information</h5>
+<p style="color: white">If you have any questions, please email me. My email address is <span style="border: 1px solid">laurencapucci@gmail.com.</span> My phone number is <span style="border: 1px solid black">224-300-8421.</span></p>
+</div>
+
+<div class="additionalinfo">
+<h5>FAQS</h5>
+<h4>Are you working on any personal projects right now?</h4>
+<p style="color: white">I am currently focusing on learning how to code. I am trying to learn CSS, HTML and python.</p>
+<h4>What are your post-grad plans?</h3>
+<p style="color: white">I am currently looking at applying to a few pre-health Masters Programs, specifically in the Chicago area.</p>
+</div>
 
 </body>
+-->
