boxes are officially fixed!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     #container {
         display: flex;
         flex-direction: row;
-        background-color: rgb(17, 131, 202);
 }
     
     @media (orientation: portrait) {
@@ -25,7 +24,10 @@
     padding: 30px;
     border-color: white;
     border-width: 1px;
-    border-style: solid;}
+    border-style: solid;
+    background-color: rgb(113, 172, 255);
+    height: 20px;
+    text-align: center;}
 </style>
 </head>
 
