--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
         <p>Journalism Articles</p>
     </div>
     <div class="item">
-        <p>My Biology Experience</p>
+        <p><a href="https://drive.google.com/file/d/1Sc_lOcDsd7ETBYSwueBP8nV6MtGSz-_S/view?usp=sharing">My Resume</a></p>
         </div>
     <div class="item">
         <p>Personal Projects</p>
     </div>
     <div class="item">
-       <p>Contact Information</p>
+        <p><a href=contactinfo.html>Contact Information</a></p>
+        </div>
     </div>
 </div>
 
