--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,3 +1,18 @@
+<!DOCTYPEhtml>
+<html>
+
+<head>
+
+<title>Contact Information
+</title>
+
+<link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+
+<!--For this page, I want to display my contact information, including my LinkedIn Account.-->
+
 <h1> Contact Information </h1>
 
 <p>
@@ -11,4 +26,6 @@
 <img alt="LinkedIn" src="linkedin.logo.webp" width=200px height=201px margin="50px"/>
 </a>
 
-<p>If you would like to contact me directly, my email is laurencapucci@gmail.com and my phone number is +1 (224) 300-8421. </p>
+<p>If you would like to contact me directly, my email is <span style="font-size: 16px"></span> <b>laurencapucci@gmail.com</b></span> and my phone number is <span style="font-size: 16px"></span> <b>+1 (224) 300-8421</b></span>. </p>
+
+</body>
