--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
-
 <title>Lauren Capucci's Portfolio
 </title>
 
 <link rel="stylesheet" href="style.css">
+
+<!--I decided to link my CSS page here so I can properly set-up the design of my website on a CSS page and make it more organized.-->
 
 <style>
     #container {
@@ -33,24 +34,27 @@
 
 <body>
 
+<!--Now, I'm adding in a sort of "grid" so as to set up the tabs of my website.-->
+
 <div id="container">
     <div class="item">
-        <p>Journalism Articles</p>
-    </div>
+        <p><a href=journalismarticles.html>Journalism Articles</a></p>
+        </div>
     <div class="item">
         <p><a href="https://drive.google.com/file/d/1Sc_lOcDsd7ETBYSwueBP8nV6MtGSz-_S/view?usp=sharing">My Resume</a></p>
         </div>
     <div class="item">
-        <p>Personal Projects</p>
-    </div>
+        <p><a href=personalprojects.html>My Personal Projects</a></p>
+        </div>
     <div class="item">
         <p><a href=contactinfo.html>Contact Information</a></p>
         </div>
     </div>
 </div>
 
+<!--Here's the actual content for the home page-->
 <h1>About me</h1>
-<img alt="Lauren with her graduation cap smiling" src="me.jpg" width=304px height=201px/>
+<div style="text-align:center;"><img alt="Lauren with her graduation cap smiling" src="me.jpg" width=304px height=201px/></div>
 
 <div class="headers"><h2 id="Section">Introducing Me</h2></div>
 <p> My name is Lauren Capucci, and I am a senior at Northwestern University studying journalism and biology. I am originally from Porto Alegre, Brazil, but moved to Evanston a few years ago for school. I am currently on the pre-med track and hope to apply to medical schools soon.</p>
