--- a/personalprojects.html
+++ b/personalprojects.html
@@ -1,4 +1,18 @@
+<!DOCTYPEhtml>
+<html>
+
+<head>
+
+<title>Personal Projects
+</title>
+
+<link rel="stylesheet" href="style.css">
+
+</head>
+<body>
 <h1> My Personal Projects </h1>
+
+<!--For this page, I plan on highlighting 2 experiences that I have had outside of the classroom.-->
 
 <p>
     Over the last few years, I have been able to participate in several extracurricular activities that have complimented by academic background. 
@@ -8,9 +22,9 @@
     Since 2022, I have been part of an organization called Camp Hope that organizes activities for young adults with mental and physical disabilities. Below, you will find pictures of the work we do at Camp Hope.  
 </p>
 
-<p>
-    Inser pictures here.
-</p>
+<img alt="Lauren at Camp Hope." src="IMG_0204.png" height=120px/>
+<img alt="Lauren at Camp Hope." src="IMG_1085.png" height=140px/>
+<img alt="Lauren at Camp Hope." src="IMG_6687.png" height=140px/>
 
 <p>
     I have also been training for a 10K. This summer, I was able to participate in a 5K run in Chicago called "The Big Ten Run." Training for my next race has been quite the challenge, but it has also taught me so much about resilience, drive and perseverance.
@@ -23,3 +37,4 @@
 <p>
     My experiences at Camp Hope and my experiences in training for a 10K race have helped me develop skills that are relevant both in journalism and in medicine. Learning to help others while developing empathy have helped me better connect with my sources during interviews and patients during consultations. I hope to continue working on these personal projects seen as they have helped me become a better journalist, student and person.
 </p>
+</body>
