--- a/contactinfo.html
+++ b/contactinfo.html
@@ -8,24 +8,25 @@
 
 <link rel="stylesheet" href="style.css">
 
+<style>
+    body {
+        background-color: rgb(228, 228, 228);
+    }
+
+.textonthispage {
+    text-align: center;
+    }
+
+</style>
+
 </head>
 <body>
 
 <!--For this page, I want to display my contact information, including my LinkedIn Account.-->
 
-<h1> Contact Information </h1>
+<h1 style="font-family: sans-serif; font-size: 24px; text-align: center; margin-bottom: 10px; margin-top: 50px;">Contact Information</h1>
 
-<p>
-    There are several ways to contact me; any of the options below are fine.
-</p>
-
-<p> Click on the logo below to access my LinkedIn account.</p>
-
-
-<a href="https://www.linkedin.com/in/lauren-capucci-793871274">
-<img alt="LinkedIn" src="linkedin.logo.webp" width=200px height=201px margin="50px"/>
-</a>
-
-<p>If you would like to contact me directly, my email is <span style="font-size: 16px"></span> <b>laurencapucci@gmail.com</b></span> and my phone number is <span style="font-size: 16px"></span> <b>+1 (224) 300-8421</b></span>. </p>
+<div class="textonthispage"><p style="margin-top: 100px";> If you would like to get in touch with me,</p></div>
+<div class="textonthispage"><p><a href="mailto:laurencapucci@gmail.com">email me</a> or connect with me on <a href="www.linkedin.com/in/lauren-capucci-793871274">Linkedin.</a></p></div>
 
 </body>
