--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
         #container {flex-direction: column;}
     }
 
+.aboutme {
+    font-family: sans-serif;
+    text-align: center;
+}
+
 .item {
     text-align: center;
     padding: 30px;
     border-color: white;
     border-width: 1px;
     border-style: solid;
-    background-color: rgb(113, 172, 255);
+    background-color: rgb(171, 193, 228);
     height: 20px;
     text-align: center;}
 </style>
@@ -53,8 +58,8 @@
 </div>
 
 <!--Here's the actual content for the home page-->
-<h1>About me</h1>
-<div style="text-align:center;"><img alt="Lauren with her graduation cap smiling" src="me.jpg" width=304px height=201px/></div>
+<h1 class="aboutme">About me</h1>
+<!--<div style="text-align:center;"><img alt="Lauren with her graduation cap smiling" src="me.jpg" width=304px height=201px/></div>-->
 
 <div class="headers"><h2 id="Section">Introducing Me</h2></div>
 <p> My name is Lauren Capucci, and I am a senior at Northwestern University studying journalism and biology. I am originally from Porto Alegre, Brazil, but moved to Evanston a few years ago for school. I am currently on the pre-med track and hope to apply to medical schools soon.</p>
