--- a/journalismarticles.html
+++ b/journalismarticles.html
@@ -8,18 +8,28 @@
 
 <link rel="stylesheet" href="style.css">
 
+<style>
+    body {
+        background-color: rgb(228, 228, 228);
+    }
+</style>
+
 </head>
 
 <!--For this page, I plan on linking 2-3 clips of what I have written in the past.-->
 
 <body>
 
-<h1> Journalism Articles</h1>
+<h1 style="font-family: sans-serif; font-size: 24px; text-align: center; margin-bottom: 25px;">Journalism Articles</h1>
 
 <p>I've had the privlege of being able to explore several areas of journalism, including the business side of the industry. Over the last four years at Medill, I was able to learn about investigating and reporting on a wide variety of events and  stories.</p>
 
 <p>One of the topics I explored was gentrification in two of Chicago's neighborhoods. To download the article, <a href="Journalism 301 - Feature Story-2.pdf">click here</a>.</p>
 
 <p>Another piece I wrote was about the business of journalism. I focused on a specific Chicago-based paper: The TRiiBE. After exploring their business model, analyzing their publications and learning about their mission and vision, my group and I were able to write out a report on how the publication could change their approach to journalism in order to grow their business. To download the report, <a href="Printers-Discovery-BOJ Winter 2024.pdf">click here</a>.</p>
+
+<div class="flourish-embed flourish-map" data-src="visualisation/19926109"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/19926109/thumbnail" width="100%" alt="map visualization" /></noscript></div>
+
+<div class="flourish-embed flourish-chart" data-src="visualisation/19853948"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/19853948/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
 
 </body>
