--- a/journalismarticles.html
+++ b/journalismarticles.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>My Journalism Articles
+<title>Trends in STD Cases in Chicago and Illinois
 </title>
 
 <link rel="stylesheet" href="style.css">
@@ -16,20 +16,28 @@
 
 </head>
 
-<!--For this page, I plan on linking 2-3 clips of what I have written in the past.-->
+<!--For this page, I plan on linking my Flourish inforgraphics and map.-->
 
 <body>
 
-<h1 style="font-family: sans-serif; font-size: 24px; text-align: center; margin-bottom: 25px;">Journalism Articles</h1>
+<h1 style="font-family: sans-serif; font-size: 24px; text-align: center; margin-bottom: 25px;">Trends in STD Cases in Chicago and Illinois</h1>
 
-<p>I've had the privlege of being able to explore several areas of journalism, including the business side of the industry. Over the last four years at Medill, I was able to learn about investigating and reporting on a wide variety of events and  stories.</p>
+<p> There has been no specific trend identified in changes in sexually-transmitted diseases (STDs) cases in Illinois in the last few years; this is likely due to the 2020 pandemic. As shown below, with the COVID-19 pandemic, there was a decline in the number of STD infections with lockdown, which did not pick-up by 2021. It can also be observed that there is a significantly higher number of chlamydia diagnoses compared to gonorrhea and early syphilis.</p>
 
-<p>One of the topics I explored was gentrification in two of Chicago's neighborhoods. To download the article, <a href="Journalism 301 - Feature Story-2.pdf">click here</a>.</p>
+<div class="flourish-embed flourish-chart" data-src="visualisation/20493736"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493736/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
 
-<p>Another piece I wrote was about the business of journalism. I focused on a specific Chicago-based paper: The TRiiBE. After exploring their business model, analyzing their publications and learning about their mission and vision, my group and I were able to write out a report on how the publication could change their approach to journalism in order to grow their business. To download the report, <a href="Printers-Discovery-BOJ Winter 2024.pdf">click here</a>.</p>
+<p> Despite high numbers of transmission observed in the population of Illinois, STDs seem to affect minority groups more than they do others. For example, despite the population of Illinois being 14% Black, around 40% of individuals diagnosed with chlamydia, gonorrhea or early syphilis are Black. The same trend is observed within the Latinx population of Illinois. </p>
 
-<div class="flourish-embed flourish-map" data-src="visualisation/19926109"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/19926109/thumbnail" width="100%" alt="map visualization" /></noscript></div>
+<div class="flourish-embed flourish-chart" data-src="visualisation/20493210"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493210/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
 
-<div class="flourish-embed flourish-chart" data-src="visualisation/19853948"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/19853948/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
+<p> Most diagnoses of early syphilis or gonorrhea were made with male individuals, seem as they are usually more symptomatic with these two illnesses; the same can be said to explain why more females are diagnosed with chlamydia. This comes to show how public health initiatives in Illinois should focus their efforts in also testing those that are assymptomatic to such diseases. </p>
+
+<div class="flourish-embed flourish-chart" data-src="visualisation/20492886"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20492886/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
+
+<p> Condom distribution sites seem to be spread throughout the city of Chicago evenly. There are more sites in more heavily-populated ZIP codes, but there are no public health "deserts" observed, which indicates that there is a more equitable approach to distributing condoms for safe-sex practices. </p>
+
+<div class="flourish-embed flourish-map" data-src="visualisation/20494981"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20494981/thumbnail" width="100%" alt="map visualization" /></noscript></div>
+
+<p> As observed in the figures above, some population groups are more vulnerable to STDs, suggesting that there should be more public health efforts made towards more diagnoses across assymptomatic groups and more initiatives that target minorities, which are impacted more. </p>
 
 </body>
