--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             border-width: 1px;
             border-style: solid;
             background-color: rgb(171, 193, 228);
-            height: 20px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
@@ -82,9 +85,14 @@
         <li>Baking.</li>
     </ul>
 
+    <script>
+        console.log("console");
+    </script>
+
 </body>
 
 </html>
+
 
 
 
