--- a/personalprojects.html
+++ b/personalprojects.html
@@ -22,6 +22,8 @@
     Since 2022, I have been part of an organization called Camp Hope that organizes activities for young adults with mental and physical disabilities. Below, you will find pictures of the work we do at Camp Hope.  
 </p>
 
+<!--Inserting three images of me at Camp Hope.-->
+
 <img alt="Lauren at Camp Hope." src="IMG_0204.png" height=120px/>
 <img alt="Lauren at Camp Hope." src="IMG_1085.png" height=140px/>
 <img alt="Lauren at Camp Hope." src="IMG_6687.png" height=140px/>
@@ -29,6 +31,8 @@
 <p>
     I have also been training for a 10K. This summer, I was able to participate in a 5K run in Chicago called "The Big Ten Run." Training for my next race has been quite the challenge, but it has also taught me so much about resilience, drive and perseverance.
 </p>
+
+<!--Inserting three images of me running a 5k.-->
 
 <img alt="Lauren after running a 5K." src="IMG_3756.png" width=210px height=150px/>
 <img alt="Lauren after running a 5K." src="IMG_3763.png" width=200px height=150px/>
