--- a/journalismarticles.html
+++ b/journalismarticles.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -8,11 +8,15 @@
 
 <link rel="stylesheet" href="style.css">
 
+<meta charset="UTF-8">
+
 <style>
     body {
         background-color: rgb(228, 228, 228);
     }
 </style>
+
+<link rel="icon" type="image/png" sizes="16x16" href="icon.png">
 
 </head>
 
@@ -24,19 +28,25 @@
 
 <p> There has been no specific trend identified in changes in sexually-transmitted diseases (STDs) cases in Illinois in the last few years; this is likely due to the 2020 pandemic. As shown below, with the COVID-19 pandemic, there was a decline in the number of STD infections with lockdown, which did not pick-up by 2021. It can also be observed that there is a significantly higher number of chlamydia diagnoses compared to gonorrhea and early syphilis.</p>
 
-<div class="flourish-embed flourish-chart" data-src="visualisation/20493736"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493736/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
+<div class="flourish-embed flourish-chart" data-src="visualisation/20493736"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493736/thumbnail" width="60%" alt="chart visualization" /></noscript></div>
 
 <p> Despite high numbers of transmission observed in the population of Illinois, STDs seem to affect minority groups more than they do others. For example, despite the population of Illinois being 14% Black, around 40% of individuals diagnosed with chlamydia, gonorrhea or early syphilis are Black. The same trend is observed within the Latinx population of Illinois. </p>
 
-<div class="flourish-embed flourish-chart" data-src="visualisation/20493210"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493210/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
+<div class="flourish-embed flourish-chart" data-src="visualisation/20493210"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20493210/thumbnail" width="60%" alt="chart visualization" /></noscript></div>
 
 <p> Most diagnoses of early syphilis or gonorrhea were made with male individuals, seem as they are usually more symptomatic with these two illnesses; the same can be said to explain why more females are diagnosed with chlamydia. This comes to show how public health initiatives in Illinois should focus their efforts in also testing those that are assymptomatic to such diseases. </p>
 
-<div class="flourish-embed flourish-chart" data-src="visualisation/20492886"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20492886/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
+<div class="flourish-embed flourish-chart" data-src="visualisation/20492886"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20492886/thumbnail" width="60%" alt="chart visualization" /></noscript></div>
+
+<video width="640" height="360" controls autoplay loop >
+    <source src="video.mp4" type="video/mp4">
+</video>
+
+<p> As reported by PBS, in the early 2010s, there was a rise observed in the number of STD diagnoses being made in the United States. Since, there have been several public health initiatives conducted to decreases these numbers.</p>
 
 <p> Condom distribution sites seem to be spread throughout the city of Chicago evenly. There are more sites in more heavily-populated ZIP codes, but there are no public health "deserts" observed, which indicates that there is a more equitable approach to distributing condoms for safe-sex practices. </p>
 
-<div class="flourish-embed flourish-map" data-src="visualisation/20494981"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20494981/thumbnail" width="100%" alt="map visualization" /></noscript></div>
+<div class="flourish-embed flourish-map" data-src="visualisation/20494981"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/20494981/thumbnail" width="60%" alt="map visualization" /></noscript></div>
 
 <p> As observed in the figures above, some population groups are more vulnerable to STDs, suggesting that there should be more public health efforts made towards more diagnoses across assymptomatic groups and more initiatives that target minorities, which are impacted more. </p>
 
