--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,10 +1,14 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html>
 
 <head>
 
 <title>Contact Information
 </title>
+
+<meta charset="UTF-8">
+
+<link rel="icon" type="image/png" sizes="16x16" href="icon.png">
 
 <link rel="stylesheet" href="style.css">
 
