--- a/personalprojects.html
+++ b/personalprojects.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,7 +6,11 @@
 <title>Personal Projects
 </title>
 
+<meta charset="UTF-8">
+
 <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" sizes="16x16" href="icon.png">
 
 </head>
 <body>
